# rust-url-shortener

./: .env.example  Cargo.toml  Readme.md
src/: config.rs  main.rs  utils.rs
src/handlers/: short.rs
src/models/: mod.rs
src/models/database/: url.rs
src/models/request/: mod.rs  redirect_request.rs  shorten_request.rs
src/models/response/: mod.rs  redirect_response.rs  response.rs  shorten_response.rs
src/repository/: url_repository.rs
src/routes/: mod.rs  short.rs
