[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono"] }
chrono = { version =  "0.4.39", features = ["serde"] }
